# Tb_for_tracking_habits

./: .gitignore  Dockerfile  README.md  README_EN.md  docker-compose.yaml  env.template  pyproject.toml  requirements.txt  test.json  test.py
backend_dev/src/: database.py  docker-compose.yaml  main.py  models.py  routers.py  schemas.py
certs/: jwt-private.pem  jwt-public.com  text
docker/: app.sh
frontend_dev/: loader.py  main.py
frontend_dev/config_info/: config.py
frontend_dev/handlers/: __init__.py  add_habit.py  edit_habits.py  habit_stats.py  habits.py  help.py  help_func.py  middleware.py  request_methods.py  set_reminder.py  start.py  track_habit.py
frontend_dev/handlers/auth/: start.py
frontend_dev/keyboards/: keyboards_answr.py
frontend_dev/middleware/: middleware.py
frontend_dev/requests_methods/: request_methods.py
frontend_dev/states/: __init__.py  states_bot.py
frontend_dev/utils/: set_bot_commands.py
src/: alembic.ini  config.py  database.py  docker-compose.yaml  main.py  methods.py  models.py  routers.py  schemas.py  utils.py
src/.db/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
src/.db/global/: 1260  1262  2671  pg_control  pg_internal.init
src/.db/pg_xact/: 0000
src/database/: database.py
src/db/global/: 1260  pg_control  pg_internal.init
src/db/pg_stat/: pgstat.stat
src/frontend_dev/: main.py
src/migrations/: env.py
src/migrations/versions/: 584a4ff0f936_habit_edit.py  711e336d4cb0_habittrackings_edit.py  e5c7aae3ebf7_habittrackings.py  f70040ded0cf_habits_table.py  f92cef5b6eef___init__.py
(+77 files in other folders)
