[tool.poetry]
name = "tb-for-tracking-habits"
version = "0.1.0"
description = ""
authors = ["george-author"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "^2.4.0"
aiohttp = "^3.10.5"
aiosignal = "^1.3.1"
annotated-types = "^0.7.0"
anyio = "^4.6.0"
async-timeout = "^4.0.3"
asyncpg = "^0.29.0"
attrs = "^24.2.0"
bcrypt = "^4.2.0"
black = "^24.8.0"
certifi = "^2024.8.30"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
fastapi = "^0.115.0"
frozenlist = "^1.4.1"
greenlet = "^3.1.1"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httpx = "^0.27.2"
idna = "^3.10"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.35"
starlette = "^0.38.5"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.3"
uvicorn = "^0.30.6"
yarl = "^1.11.1"
multidict = "^6.1.0"
mypy-extensions = "^1.0.0"
packaging = "^24.1"
passlib = "^1.7.4"
pathspec = "^0.12.1"
platformdirs = "^4.3.6"
py-postgresql = "^1.3.0"
pyjwt = "^2.9.0"
pytelegrambotapi = "^4.23.0"
prettytable = "^3.11.0"
python-multipart = "^0.0.10"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
